--- a/css/style.css
+++ b/css/style.css
@@ -276,10 +276,12 @@ li.first{
     border: 1px solid lightgray;
     padding: 20px;
     /*margin: 0 auto;*/
-    text-align: center;
+    /*text-align: center;*/
+    /*float: left;*/
     margin-left: 0;
     margin: 10px 6px;
 }
+
 .service_item_reclame h3{
     font-size: 16pt;
     font-weight: 400;
@@ -338,14 +340,17 @@ li.first{
 
 .tarif-table .green {
     background-color: #8fc400;
+    font-size: 17pt;
 }
 
 .tarif-table .blue {
     background-color: #4386CE;
+    font-size: 17pt;
 }
 
 .tarif-table .red {
     background-color: #c72200;
+    font-size: 17pt;
 }
 
 .tarif-table .cash {
@@ -377,7 +382,7 @@ li.first{
 }
 
 .tarif-table td {
-    color: #444444;
+    color: #000;
     font-size: 18px;
     padding: 0px 12px;
     text-align: left;
@@ -1410,6 +1415,18 @@ a.color1:hover {
   .comment {
     margin-left: 10px;
   }
+    #link_details{
+        width: 33%;
+    }
+}
+@media only screen and(max-width: 1024px){
+    .page1_header .banner + .banner + .banner {
+        padding-top: 52px;
+        padding-bottom: 3px;
+    }
+    #link_details{
+        width: 100%;
+    }
 }
 @media only screen and (max-width: 979px) {
   .map figure,
@@ -1435,6 +1452,9 @@ a.color1:hover {
   .img_inner.fleft {
     margin-bottom: 20px;
   }
+    #link_details{
+        width: 55%;
+    }
 }
 @media only screen and (max-width: 767px) {
   .fright {
@@ -1519,12 +1539,38 @@ a.color1:hover {
   .block-3 {
     margin-bottom: 30px;
   }
+    .rel img {
+        max-width: 96%;
+        float: left;
+        background-color: rgba(13, 15, 13, 0.79);
+        padding: 11px;
+    }
+    .contact_header {
+        font-size: 16pt;
+        line-height: 31px;
+        /* float: right; */
+        clear: both;
+        margin-bottom: 0;
+        padding: 0;
+        /* margin: 0; */
+        margin-top: 5px;
+        /* text-align: center; */
+        margin-right: 120px;
+    }
+    .price_block_other {
+
+        margin-top: 18px;
+    }
 }
 @media only screen and (max-width: 600px){
 .image_services{
     display: none;
     visibility: hidden;
 }
+#link_details{
+    width: 100%;
+}
+
 .image_services_hide{
     display: block;
     text-align: center;
@@ -1532,4 +1578,29 @@ a.color1:hover {
     .image_services_hide img{
         width: 48%;
     }
+
+}
+@media only screen and (max-width: 480px){
+.contact_header{
+    margin-right: 44px;
+}
+    .price-table th {
+
+        font-size: 13px;}
+    .big-size-font {
+        font-size: 13px;}
+H2{
+    font-size: 44px;
+}
+h2.head__1 {
+    font-size: 61px;
+    padding-top: 37px;}
+h4 {
+   padding-top: 22px;}
+.social_container {
+   margin-top: 12px;
+}
+}
+@media only screen and (max-width: 320px){
+
 }
