--- a/css/style.css
+++ b/css/style.css
@@ -1277,7 +1277,9 @@ text-align: justify;
     /*background-color: #68df32;*/
     width: 25%;
     text-align: center;
-    margin-bottom: 20px;
+    margin-top: 35px;
+
+    margin-bottom: 30px;
     text-transform: uppercase;
     font-weight: 400;
 }
