--- a/css/style.css
+++ b/css/style.css
@@ -1029,6 +1029,7 @@ a.service_link:hover{
     margin: 0 auto;
     margin-top: 43px;
     margin-bottom: 45px;
+    color: #ffffff;
 }
 .button_services a{
     text-align: center;
