мелкие поправки после замечаний///

--- a/css/contact-form.css
+++ b/css/contact-form.css
@@ -52,7 +52,7 @@ form label.error {
 {
     display: block;
     width: 100%;
-    border: 2px solid #DDD;
+    border: 2px solid #9D9292;
     border-radius: 3px;
     padding: 10px 10px;
     background: #FFF;
